syntax = 'proto3';
message JwtUser {
    string id = 0;
    string email = 1;
    string org = 2;
    repeated string roles = 3;
}

message BaseServiceRequest {
    JwtUser invoker = 0;
}